# QRCG-C

./: CMakeLists.txt  README.md
src/: Main.c
