cmake_minimum_required(VERSION 4.2.3)
project(QRCG LANGUAGES C VERSION 20260202)
set(CMAKE_C_STANDARD 99) # 90 for C89, 99 for C99, 11 for C11, 17 for C17 and 23 for C23.
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS ON)
set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
include(FetchContent)
FetchContent_Declare(C-Utils GIT_REPOSITORY https://github.com/paulao255/C-Utils.git GIT_TAG main)
FetchContent_Declare(qrencode GIT_REPOSITORY https://github.com/fukuchi/libqrencode.git GIT_TAG master)
FetchContent_Declare(stb GIT_REPOSITORY https://github.com/nothings/stb.git GIT_TAG master)
FetchContent_MakeAvailable(C-Utils)
FetchContent_MakeAvailable(qrencode)
FetchContent_MakeAvailable(stb)
add_executable(QRCode-Generator ../src/Main.c)
target_compile_options(QRCode-Generator PRIVATE -fdiagnostics-color=always -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Wformat=2 -Wnull-dereference -Wstrict-prototypes -Wmissing-prototypes -Wcast-align -Wpointer-arith -Wundef -v -O3 -funroll-loops -flto -mtune=native -march=native)
target_include_directories(QRCode-Generator PRIVATE ${stb_SOURCE_DIR})
target_link_libraries(QRCode-Generator PRIVATE C-Utils qrencode)
set_target_properties(QRCode-Generator PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
